<resources>
    <string name="app_name">1190300_YousefShamasneh_1192941_KhaledRoub</string>
    <string name="title_activity_normal_customer">NormalCustomer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_car">Car List</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_special_offers">Special Offers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_admin">Admin</string>
    <string name="menu_admin">Add Admin</string>
    <string name="menu_view_reserves">View Reserves</string>
    <string name="menu_delete">Delete User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_format">%1$s %2$.2f</string>
    <string-array name="rangeSliderValues">
        <item>0</item>
        <item>1000</item>
    </string-array>

</resources>