<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_temp2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.example.project_temp2.ui.car.CarFragment"
        android:label="@string/menu_car"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/nav_reservations"
        android:name="com.example.project_temp2.ui.reservations.ReservationsFragment"
        android:label="@string/menu_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.project_temp2.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_special_offers"
        android:name="com.example.project_temp2.ui.special.SpecialFragment"
        android:label="@string/menu_special_offers"
        tools:layout="@layout/fragment_special" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.project_temp2.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.project_temp2.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.project_temp2.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>